--- a/style.css
+++ b/style.css
@@ -1,38 +1,74 @@
 body {
-    background-color: rgb(75, 72, 72);
-  }
-  
-  #container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  h1 {
-    color: orangered;
-  }
-  
-  input {
-    width: 100px;
-    margin-bottom: 10px;
-  }
-  
-  label {
-    color: aliceblue;
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  button {
-    margin-bottom: 10px;
-    background-color: rgb(72, 228, 72);
-  }
-  
-  canvas {
-    width: 600px;
-    height: 500px;
-    border: 1px solid black;
-    background-color: rgb(192, 181, 181);
-  }
-  
+  background-color: rgb(10, 10, 10);
+  margin: 0;
+  font-family: 'Courier New', Courier, monospace;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+h1 {
+  font-size: 18px;
+  font-weight: bold;
+  color: rgb(112, 95, 153);
+  margin-bottom: 20px;
+}
+
+#form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+label {
+  color: rgb(219, 195, 190);
+  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+input {
+  width: 150px;
+  padding: 5px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button {
+  background-color: rgb(72, 228, 72);
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(55, 180, 55);
+}
+
+.canvas-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+canvas {
+  border: 1px solid #000;
+}
+
